--- a/README.Rmd
+++ b/README.Rmd
@@ -6,10 +6,10 @@ output: github_document
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+    collapse = TRUE,
+    comment = "#>",
+    fig.path = "man/figures/README-",
+    out.width = "100%"
 )
 ```
 # schex
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 <img src='man/figures/logo.png' align="right" height="139" />
 
 The goal of schex is to provide easy plotting of hexagon cell representations
-of single cell data stored in `SingleCellExperiment` or `Seurat` objects.
+of single cell data stored in `SingleCellExperiment` objects.
 
 ## Installation
 
@@ -67,10 +67,14 @@ Check out the vignettes to learn about how to get started. Or for a quick start,
 use the following code.
 
 ```
-library(schex)
-library(Seurat)
-data("pbmc_small")
-pbmc_small <- make_hexbin(pbmc_small, 10, dimension_reduction = "PCA")
-plot_hexbin_density(pbmc_small)
+library(TENxPBMCData)
+library(scater)
+tenx_pbmc3k <- TENxPBMCData(dataset = "pbmc3k")
+rm_ind <- calculateAverage(tenx_pbmc3k) < 0.1
+tenx_pbmc3k <- tenx_pbmc3k[!rm_ind, ]
+tenx_pbmc3k <- logNormCounts(tenx_pbmc3k)
+tenx_pbmc3k <- runPCA(tenx_pbmc3k)
+tenx_pbmc3k <- make_hexbin(tenx_pbmc3k, 10, dimension_reduction = "PCA")
+plot_hexbin_density(tenx_pbmc3k)
 ```
 
