--- a/vignettes/Seurat_schex.Rmd
+++ b/vignettes/Seurat_schex.Rmd
@@ -40,8 +40,10 @@ The dataset already contains two dimension reductions (PCA and TSNE). We will no
 
 ```{r umap, message=FALSE, warning=FALSE}
 set.seed(10)
-pbmc_small <- RunUMAP(pbmc_small, dims=1:10,
-      verbose = FALSE)
+pbmc_small <- RunUMAP(pbmc_small,
+    dims = 1:10,
+    verbose = FALSE
+)
 ```
 
 ### Converting to SingleCellExperiment object
@@ -61,8 +63,10 @@ At this stage in the workflow we usually would like to plot aspects of our data 
 First, I will calculate the hexagon cell representation for each cell for a specified dimension reduction representation. I decide to use `nbins=40` which specifies that I divide my x range into 10 bins. Note that this might be a parameter that you want to play around with depending on the number of cells/ nuclei in your dataset. Generally, for more cells/nuclei, `nbins` should be increased.
 
 ```{r calc-hexbin}
-pbmc.sce <- make_hexbin(pbmc.sce, nbins = 10, 
-    dimension_reduction = "UMAP")
+pbmc.sce <- make_hexbin(pbmc.sce,
+    nbins = 10,
+    dimension_reduction = "UMAP"
+)
 ```
 
 #### Plot number of cells/nuclei in each hexagon cell
@@ -78,7 +82,7 @@ plot_hexbin_density(pbmc.sce)
 Next I colour the hexagon cells by some meta information, such as the median total count in each hexagon cell.
 
 ```{r plot-meta-1, fig.height=7, fig.width=7}
-plot_hexbin_meta(pbmc.sce, col="nCount_RNA", action="median")
+plot_hexbin_meta(pbmc.sce, col = "nCount_RNA", action = "median")
 ```
 
 #### Plot gene expression in hexagon cell representation
@@ -86,10 +90,12 @@ plot_hexbin_meta(pbmc.sce, col="nCount_RNA", action="median")
 Finally, I will visualize the gene expression of the CD1C gene in the hexagon cell representation.
 
 ```{r plot-gene, fig.height=7, fig.width=7}
-gene_id <-"CD1C"
-schex::plot_hexbin_feature(pbmc.sce, type="counts", feature=gene_id, 
-    action="mean", xlab="UMAP1", ylab="UMAP2", 
-    title=paste0("Mean of ", gene_id))
+gene_id <- "CD1C"
+schex::plot_hexbin_feature(pbmc.sce,
+    type = "counts", feature = gene_id,
+    action = "mean", xlab = "UMAP1", ylab = "UMAP2",
+    title = paste0("Mean of ", gene_id)
+)
 ```
 
 ### Understanding `schex` output as `ggplot` objects
@@ -97,15 +103,17 @@ schex::plot_hexbin_feature(pbmc.sce, type="counts", feature=gene_id,
 The `schex` packages renders ordinary `ggplot` objects and thus these can be treated and manipulated using the [`ggplot` grammar](https://ggplot2.tidyverse.org/). For example the non-data components of the plots can be changed using the function `theme`.
 
 ```{r}
-gene_id <-"CD1C"
-gg <- schex::plot_hexbin_feature(pbmc.sce, type="counts", feature=gene_id, 
-    action="mean", xlab="UMAP1", ylab="UMAP2", 
-    title=paste0("Mean of ", gene_id))
+gene_id <- "CD1C"
+gg <- schex::plot_hexbin_feature(pbmc.sce,
+    type = "counts", feature = gene_id,
+    action = "mean", xlab = "UMAP1", ylab = "UMAP2",
+    title = paste0("Mean of ", gene_id)
+)
 gg + theme_void()
 ```
 
 The fact that `schex` renders `ggplot` objects can also be used to save these plots. Simply use `ggsave` in order to save any created plot.
 
 ```{r, eval=FALSE}
-ggsave(gg, file="schex_plot.pdf")
+ggsave(gg, file = "schex_plot.pdf")
 ```
