--- a/vignettes/using_schex.Rmd
+++ b/vignettes/using_schex.Rmd
@@ -57,8 +57,10 @@ package](http://bioconductor.org/packages/release/data/experiment/html/TENxPBMCD
 ```{r load}
 tenx_pbmc3k <- TENxPBMCData(dataset = "pbmc3k")
 
-rownames(tenx_pbmc3k) <- uniquifyFeatureNames(rowData(tenx_pbmc3k)$ENSEMBL_ID, 
-    rowData(tenx_pbmc3k)$Symbol_TENx)
+rownames(tenx_pbmc3k) <- uniquifyFeatureNames(
+    rowData(tenx_pbmc3k)$ENSEMBL_ID,
+    rowData(tenx_pbmc3k)$Symbol_TENx
+)
 ```
 
 In the next few sections, I will perform some simple quality control
@@ -81,18 +83,25 @@ library size or feature count.
 
 ```{r filter-cells}
 rowData(tenx_pbmc3k)$Mito <- grepl("^MT-", rownames(tenx_pbmc3k))
-colData(tenx_pbmc3k) <- cbind(colData(tenx_pbmc3k), 
-    perCellQCMetrics(tenx_pbmc3k, 
-        subsets=list(Mt=rowData(tenx_pbmc3k)$Mito)))
-rowData(tenx_pbmc3k) <- cbind(rowData(tenx_pbmc3k), 
-    perFeatureQCMetrics(tenx_pbmc3k))
+colData(tenx_pbmc3k) <- cbind(
+    colData(tenx_pbmc3k),
+    perCellQCMetrics(tenx_pbmc3k,
+        subsets = list(Mt = rowData(tenx_pbmc3k)$Mito)
+    )
+)
+rowData(tenx_pbmc3k) <- cbind(
+    rowData(tenx_pbmc3k),
+    perFeatureQCMetrics(tenx_pbmc3k)
+)
 
 tenx_pbmc3k <- tenx_pbmc3k[, !colData(tenx_pbmc3k)$subsets_Mt_percent > 50]
 
 libsize_drop <- isOutlier(tenx_pbmc3k$total,
-      nmads = 3,type = "lower", log = TRUE)
+    nmads = 3, type = "lower", log = TRUE
+)
 feature_drop <- isOutlier(tenx_pbmc3k$detected,
-    nmads = 3, type = "lower", log = TRUE)
+    nmads = 3, type = "lower", log = TRUE
+)
 
 tenx_pbmc3k <- tenx_pbmc3k[, !(libsize_drop | feature_drop)]
 ```
@@ -100,8 +109,8 @@ tenx_pbmc3k <- tenx_pbmc3k[, !(libsize_drop | feature_drop)]
 I filter any genes that have 0 count for all cells.
 
 ```{r filter-genes}
-rm_ind <- calculateAverage(tenx_pbmc3k)<0
-tenx_pbmc3k <- tenx_pbmc3k[!rm_ind,]
+rm_ind <- calculateAverage(tenx_pbmc3k) < 0
+tenx_pbmc3k <- tenx_pbmc3k[!rm_ind, ]
 ```
 
 ### Normalization
@@ -122,8 +131,10 @@ UMAP, I will also set a seed.
 ```{r dim-red, message=FALSE, warning=FALSE}
 tenx_pbmc3k <- runPCA(tenx_pbmc3k)
 set.seed(10)
-tenx_pbmc3k <- runUMAP(tenx_pbmc3k, dimred = "PCA", spread = 1, 
-    min_dist = 0.4)
+tenx_pbmc3k <- runUMAP(tenx_pbmc3k,
+    dimred = "PCA", spread = 1,
+    min_dist = 0.4
+)
 ```
 
 ### Clustering
@@ -154,8 +165,10 @@ depending on the number of cells/ nuclei in your dataset. Generally, for
 more cells/nuclei, `nbins` should be increased.
 
 ```{r calc-hexbin}
-tenx_pbmc3k <- make_hexbin(tenx_pbmc3k, nbins = 40, 
-    dimension_reduction = "UMAP", use_dims=c(1,2))
+tenx_pbmc3k <- make_hexbin(tenx_pbmc3k,
+    nbins = 40,
+    dimension_reduction = "UMAP", use_dims = c(1, 2)
+)
 ```
 
 #### Plot number of cells/nuclei in each hexagon cell
@@ -175,8 +188,8 @@ majority of cells cluster membership and the median total count in each
 hexagon cell.
 
 ```{r plot-meta, fig.height=7, fig.width=7}
-plot_hexbin_meta(tenx_pbmc3k, col="cluster", action="majority")
-plot_hexbin_meta(tenx_pbmc3k, col="total", action="median")
+plot_hexbin_meta(tenx_pbmc3k, col = "cluster", action = "majority")
+plot_hexbin_meta(tenx_pbmc3k, col = "total", action = "median")
 ```
 
 While for plotting the cluster membership the outcome is not too
@@ -184,8 +197,8 @@ different from the classic plot, it is much easier to observe
 differences in the total count.
 
 ```{r plot-meta-trad, fig.height=7, fig.width=7}
-plotUMAP(tenx_pbmc3k, colour_by="cluster")
-plotUMAP(tenx_pbmc3k, colour_by="total")
+plotUMAP(tenx_pbmc3k, colour_by = "cluster")
+plotUMAP(tenx_pbmc3k, colour_by = "total")
 ```
 
 For convenience there is also a function that allows the calculation of
@@ -193,10 +206,12 @@ label positions for factor variables. These can be overlayed with the
 package `ggrepel`.
 
 ```{r plot-meta-label, message=FALSE, fig.height=7, fig.width=7}
-label_df <- make_hexbin_label(tenx_pbmc3k, col="cluster")
-pp <- plot_hexbin_meta(tenx_pbmc3k, col="cluster", action="majority") 
-pp + ggrepel::geom_label_repel(data = label_df, aes(x=x, y=y, label = label), 
-    colour="black",  label.size = NA, fill = NA)  
+label_df <- make_hexbin_label(tenx_pbmc3k, col = "cluster")
+pp <- plot_hexbin_meta(tenx_pbmc3k, col = "cluster", action = "majority")
+pp + ggrepel::geom_label_repel(
+    data = label_df, aes(x = x, y = y, label = label),
+    colour = "black", label.size = NA, fill = NA
+)
 ```
 
 #### Plot gene expression in hexagon cell representation
@@ -205,17 +220,19 @@ Finally, I will visualize the gene expression of the POMGNT1 gene in the
 hexagon cell representation.
 
 ```{r plot-gene, fig.height=7, fig.width=7}
-gene_id <-"POMGNT1"
-plot_hexbin_feature(tenx_pbmc3k, type="logcounts", feature=gene_id, 
-    action="mean", xlab="UMAP1", ylab="UMAP2", 
-    title=paste0("Mean of ", gene_id))
+gene_id <- "POMGNT1"
+plot_hexbin_feature(tenx_pbmc3k,
+    type = "logcounts", feature = gene_id,
+    action = "mean", xlab = "UMAP1", ylab = "UMAP2",
+    title = paste0("Mean of ", gene_id)
+)
 ```
 
 Again it is much easier to observe differences in gene expression using
 the hexagon cell representation than the classic representation.
 
 ```{r plot-gene-trad, fig.height=7, fig.width=7}
-plotUMAP(tenx_pbmc3k, by_exprs_values="logcounts", colour_by=gene_id)
+plotUMAP(tenx_pbmc3k, by_exprs_values = "logcounts", colour_by = gene_id)
 ```
 
 We can overlay the gene expression data with the clusters for
@@ -223,8 +240,9 @@ convenience.
 
 ```{r, message=FALSE, fig.height=7, fig.width=7}
 plot_hexbin_feature_plus(tenx_pbmc3k,
-    col="cluster", type="logcounts",
-    feature="POMGNT1", action="mean")
+    col = "cluster", type = "logcounts",
+    feature = "POMGNT1", action = "mean"
+)
 ```
 
 ### Understanding `schex` output as `ggplot` objects
@@ -235,10 +253,12 @@ grammar](https://ggplot2.tidyverse.org/). For example the non-data
 components of the plots can be changed using the function `theme`.
 
 ```{r}
-gene_id <-"CD19"
-gg <- schex::plot_hexbin_feature(tenx_pbmc3k, type="logcounts", feature=gene_id, 
-    action="mean", xlab="UMAP1", ylab="UMAP2", 
-    title=paste0("Mean of ", gene_id))
+gene_id <- "CD19"
+gg <- schex::plot_hexbin_feature(tenx_pbmc3k,
+    type = "logcounts", feature = gene_id,
+    action = "mean", xlab = "UMAP1", ylab = "UMAP2",
+    title = paste0("Mean of ", gene_id)
+)
 gg + theme_void()
 ```
 
@@ -246,5 +266,5 @@ The fact that `schex` renders `ggplot` objects can also be used to save
 these plots. Simply use `ggsave` in order to save any created plot.
 
 ```{r, eval=FALSE}
-ggsave(gg, file="schex_plot.pdf")
+ggsave(gg, file = "schex_plot.pdf")
 ```
